Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108664

TableView positions incorrectly

    XMLWordPrintable

Details

    • 19b35008e (dev), 88187a071 (6.5), 0efc4ea6b (6.4), 157711151 (tqtc/lts-6.2)

    Description

      A TableView can automatically position itself not aligned with the left side of its area after a specific set of actions.

      Sample included to reproduce the issue.

       

      From the customer's report:

      Using the sample:
      Click the numbered buttons in order to reproduced the problem.
      Alternatively, clicking the "Reproduce Problem Automatically" will automatically the click the buttons in sequence.

      Steps to manually reproduce the problem 1:
      1. Scroll the table all the way to the right, so that the first column is no longer visible (becomes pooled).
      2. Hide the first column.
      3. Scroll all the way to the left.
      4. Show the first column.
      5. Increase window width by an amount greater than the combined width of the first and last columns.
      6. Hide the first column.
      At this point the TableView will be separated from the left edge.
      Flicking the table will reposition it, but the scroll bar will remain visible, which makes me think there is a problem relating to how the widths are defined.

      Steps to manually reproduce the problem 2:
      Click the "Toggle Problem Type" button. (This makes it so the Horizo

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            santhoshkumar Santhosh Kumar Selvaraj
            kevin.zhang Kevin Zhang
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes